# SDL2_WaterWar

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  Boat.h  EnemyGridShot.h  Game.h  GameTable.h  GridShot.h  IEntity.h  Renderer.h
src/: Application.cpp  Boat.cpp  EnemyFieldShot.cpp  Game.cpp  GameTable.cpp  Renderer.cpp  main.cpp
